namespace eShopX.Domain.Aggregates.Tags;

public enum TagType
{
    Season,
    Style,
    Feature
}
